# harold

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md
config/: default.toml
docs/: README.md  prerequisites.md  security-audit-2026-02-27.md
docs/explanations/: architecture.md
docs/how-tos/: setup.md
docs/references/: features.md
docs/references/notification/: README.md
docs/references/operation/: README.md
docs/references/reply-routing/: README.md
harold/: Cargo.toml  build.rs
harold/config/: default.toml  local.template.toml
harold/proto/: harold.proto
harold/src/: listener.rs  main.rs  notify.rs  notify_test.rs  projector.rs  route_reply.rs  route_reply_test.rs  routing.rs  routing_test.rs  settings.rs  store.rs  tmux.rs  util.rs
harold/src/inbound/: directory.rs  mod.rs  tmux.rs
harold/src/outbound/: imessage.rs  mod.rs  tts.rs
proto/: harold.proto
scripts/: setup-codesign.sh
src/: main.rs  notify.rs  projector.rs  routing.rs  settings.rs  store.rs  telemetry.rs
tasks/first-breath/: architecture.md  plan.md
tasks/fix-wal/: plan.md
