[package]
name = "harold"
version = "0.1.0"
edition = "2024"

[dependencies]
config = "0.15.19"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
uuid = { version = "1.21.0", features = ["v4", "serde"] }
thiserror = "2.0.18"
time = { version = ">=0.3.47", features = ["serde"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
tonic = "0.14.5"
tonic-prost = "0.14.5"
prost = "0.14.3"
tokio = { version = "1.49.0", features = ["full"] }
events = { path = "../events" }

[build-dependencies]
tonic-prost-build = "0.14.5"
